Refactor remove test