@@ -26,14 +26,14 @@ public class JooqChatRepositoryTest extends IntegrationEnvironment {
     @Rollback
     public void findAndAddTest() {
         List<ChatDto> chats = new ArrayList<>();
-        chats.add(new ChatDto(null, OffsetDateTime.now()));
-        chats.add(new ChatDto(null, OffsetDateTime.now()));
+        chats.add(new ChatDto(null, 1L, OffsetDateTime.now()));
+        chats.add(new ChatDto(null, 2L, OffsetDateTime.now()));
 
         for (ChatDto chat : chats) {
             chatRepository.add(chat);
         }
 
-        List<ChatDto> chatsFromDb = (List<ChatDto>) chatRepository.findAll();
+        List<ChatDto> chatsFromDb = chatRepository.findAll();
         Assertions.assertEquals(chats.size(), chatsFromDb.size());
         for (int i = 0; i < chats.size(); i++) {
             long difference =
@@ -43,17 +43,36 @@ public class JooqChatRepositoryTest extends IntegrationEnvironment {
     }
 
     @Test
+    @Transactional
+    @Rollback
+    void removeTest() {
+        ChatDto chat = new ChatDto(
+            null,
+            1L,
+            OffsetDateTime.now()
+        );
+
+        chatRepository.add(chat);
+        List<ChatDto> chats = chatRepository.findAll();
+        Assertions.assertEquals(1, chats.size());
+
+        chatRepository.remove(chat);
+        chats = chatRepository.findAll();
+        Assertions.assertEquals(0, chats.size());
+    }
+
+    @Test
     @Rollback
     @Transactional
     void isIdExistsTest() {
-        String url = "stackoferflow.com";
         ChatDto chat = new ChatDto(
             null,
+            1L,
             OffsetDateTime.now()
         );
         chatRepository.add(chat);
-        List<ChatDto> chatFromDb = (List<ChatDto>) chatRepository.findAll();
-        Assertions.assertNotNull(chatFromDb.get(0).getChatId(), "LinkId should not be null");
-        Assertions.assertTrue(chatFromDb.get(0).getChatId() > 0, "LinkId should be positive");
+        List<ChatDto> chatFromDb = chatRepository.findAll();
+        Assertions.assertNotNull(chatFromDb.getFirst().getChatId(), "LinkId should not be null");
+        Assertions.assertTrue(chatFromDb.getFirst().getChatId() > 0, "LinkId should be positive");
     }
 }
